# version-watcher

./: .editorconfig  .gitignore  README.md  config.py  logger.py  main.py  notify.py  pyproject.toml  requirements.txt
config/: nvchecker.ini  nvchecker.toml  settings-sample.ini
